--- a/css/style.css
+++ b/css/style.css
@@ -59,17 +59,17 @@ html {
 
 .hero-home {
     height: 100vh;
-    background-image: url("../assets/background/pola_col_horiz_1036.jpg");
+    background-image: url("../assets/background/pola_col_horiz_1036_flip.jpg");
     background-position: 50%;
     background-size: cover;
-    position: static
+    position: static;
 }
 
 .hero-menu {
     flex-direction: column;
     align-items: flex-start;
     margin-top: 3rem;
-    display: flex
+    display: flex;
 }
 
 .container {
@@ -80,7 +80,7 @@ html {
 
 .container.hero {
     height: 100%;
-    align-items: center;
+    /* align-items: center; */
     display: flex
 }
 
@@ -88,7 +88,7 @@ html {
     color: #fff;
     margin-bottom: .5rem;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 2.5em !important;
     text-decoration: none;
     font-family: biciYvacas !important;
 }
@@ -500,7 +500,7 @@ button {
     display: inline-block;
     transition: ease-in all 0.5s;
     font-weight: 500;
-    border-radius: 40px;
+    border-radius: 0;
 }
 
 .read_more:hover {
