--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ html {
 .hero-menu {
     flex-direction: column;
     align-items: flex-start;
-    margin-top: 3rem;
+    margin-top: 2rem;
     display: flex;
     color: #000 !important;
 }
@@ -88,7 +88,7 @@ html {
 .hero-menu-link {
     color: #000;
     margin-bottom: .5rem;
-    font-size: 16px;
+    font-size: 1.15em;
     line-height: 2.5em !important;
     text-decoration: none;
     font-family: biciYvacas !important;
