--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,12 @@ html {
     position: static;
 }
 
+@media only screen and (max-width: 600px) {
+    .hero-home {
+        background-image: url("../assets/background/hero-home-mobile.JPG");
+    }
+  }
+
 .hero-menu {
     flex-direction: column;
     align-items: flex-start;
