--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ html {
 
 @media only screen and (max-width: 800px) {
     .hero-home {
-        background-image: url("../assets/background/hero-home-1.JPG");
+        background-image: url("../assets/background/hero-home-1.jpg");
     }
   }
 
